--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 }
