about app screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="no.appsonite.gpsping">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".Application"
         android:allowBackup="true"
@@ -13,9 +14,9 @@
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
 
@@ -28,6 +29,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.WebViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.WithActionBar" />
     </application>
 
 </manifest>
