--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     apt 'com.android.databinding:compiler:1.0-rc1'
-    compile 'com.parse.bolts:bolts-android:1.2.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'io.realm:realm-android:0.87.2'
