--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'io.realm:realm-android:0.87.2'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.google.android.gms:play-services-location:8.4.0'
 }
