--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
     compile 'org.slf4j:slf4j-simple:1.6.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'info.hoang8f:android-segmented:1.0.6'
 }
