--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.6.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
+    compile 'com.p_v:flexiblecalendar:1.1.4'
 }
