--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
+    compile 'com.squareup.okhttp:okhttp:2.7.2'
+
+
     compile 'org.slf4j:slf4j-simple:1.6.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
