--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.p_v:flexiblecalendar:1.1.4'
+    compile 'com.github.lzyzsd.randomcolor:library:1.0.0'
 }
