--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
 
-        <service android:name=".services.LocationService" />
+        <service android:name=".services.LocationTrackerService" />
+        <service android:name=".services.LocationMapService" />
 
         <activity
             android:name=".activities.WebViewActivity"
