--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             </intent-filter>
         </service>
         <service
-            android:name="com.example.MyInstanceIDListenerService"
+            android:name=".services.push.GPInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
