--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <permission android:name="no.appsonite.gpsping.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
     <uses-permission android:name="no.appsonite.gpsping.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
         android:name=".Application"
