--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion "24.0.2"
 
 
     defaultConfig {
@@ -26,7 +26,7 @@ android {
         applicationId "no.appsonite.gpsping"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 33
+        versionCode 34
         versionName "1.1"
     }
     dataBinding {
@@ -46,8 +46,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -61,7 +61,7 @@ dependencies {
 
 
     compile 'org.slf4j:slf4j-simple:1.6.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:cardview-v7:24.2.0'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.p_v:flexiblecalendar:1.1.4'
     compile 'com.github.lzyzsd.randomcolor:library:1.0.0'
@@ -72,5 +72,6 @@ dependencies {
     compile 'gov.nasa:worldwind:2.0.0-986'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.anjlab.android.iab.v3:library:1.0.31'
+    compile 'com.cesards.android:cropimageview:1.0.2.1'
 
 }
