[chg] added BottomNavigationViewEx

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://jitpack.io" }
 }
 
 android {
@@ -78,5 +79,5 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.anjlab.android.iab.v3:library:1.0.31'
     compile 'com.cesards.android:cropimageview:1.0.2.1'
-
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
 }
