--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     compile 'com.cesards.android:cropimageview:1.0.2.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.amazonaws:aws-android-sdk-s3:2.6.5'
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
 }
