--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
 
 
@@ -24,7 +24,7 @@ android {
         multiDexEnabled true
         applicationId "no.appsonite.gpsping"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 60
         versionName "1.2"
         buildConfigField("String", "AMAZON_ADDRESS", '"https://s3-eu-west-1.amazonaws.com/fritidbucket/"')
@@ -57,27 +57,27 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
     annotationProcessor 'io.realm:realm-android:0.87.2'
     compile 'io.realm:realm-android:0.87.2'
-    compile 'com.google.android.gms:play-services-maps:9.4.0'
-    compile 'com.google.android.gms:play-services-location:9.4.0'
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
     compile 'com.squareup.okhttp:okhttp:2.7.2'
 
 
     compile 'org.slf4j:slf4j-simple:1.6.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:26.1.0'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.p_v:flexiblecalendar:1.1.4'
     compile 'com.github.lzyzsd.randomcolor:library:1.0.0'
-    compile "com.google.android.gms:play-services-gcm:9.4.0"
+    compile "com.google.android.gms:play-services-gcm:11.4.2"
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
@@ -88,4 +88,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.amazonaws:aws-android-sdk-s3:2.6.5'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
 }
