--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ apply plugin: 'io.fabric'
 repositories {
     maven { url 'https://maven.fabric.io/public' }
     google()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 android {
@@ -93,4 +96,5 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-s3:2.6.5'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    compile (name: 'klarna-checkout', ext: 'aar')
 }
