--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,16 +19,22 @@ repositories {
 }
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'gpsping'
+            keyPassword '5Zg4BvlG6ED4YQeXHYXf'
+            storeFile file('/Users/bnt/Downloads/gps_ping.keystore')
+            storePassword '5Zg4BvlG6ED4YQeXHYXf'
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
-
-
     defaultConfig {
         multiDexEnabled true
         applicationId "no.appsonite.gpsping"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 95
+        versionCode 99
         versionName "1.2"
         buildConfigField("String", "AMAZON_ADDRESS", '"https://s3-eu-west-1.amazonaws.com/fritidbucket/"')
     }
@@ -44,6 +50,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField 'java.lang.String', 'FILE_PROVIDER_AUTHORITY', "\"no.appsonite.gpsping.wtfileprovider\""
+            signingConfig signingConfigs.config
         }
         debug {
             buildConfigField 'java.lang.String', 'FILE_PROVIDER_AUTHORITY', "\"no.appsonite.gpsping.wtfileprovider\""
@@ -52,7 +59,6 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
-
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
@@ -62,14 +68,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     annotationProcessor 'io.realm:realm-android:0.87.2'
     compile 'io.realm:realm-android:0.87.2'
     compile 'com.google.android.gms:play-services-maps:11.4.2'
@@ -77,14 +83,12 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
     compile 'com.squareup.okhttp:okhttp:2.7.2'
-
-
     compile 'org.slf4j:slf4j-simple:1.6.1'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.p_v:flexiblecalendar:1.2.1'
     compile 'com.github.lzyzsd.randomcolor:library:1.0.0'
-    compile "com.google.android.gms:play-services-gcm:11.4.2"
+    compile 'com.google.android.gms:play-services-gcm:11.4.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
@@ -96,5 +100,5 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-s3:2.6.5'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
-    compile (name: 'klarna-checkout', ext: 'aar')
+    compile(name: 'klarna-checkout', ext: 'aar')
 }
