--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         applicationId "no.appsonite.nordictracker"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 2
+        versionCode 6
         versionName "1.2"
         buildConfigField("String", "AMAZON_ADDRESS", '"https://s3-eu-west-1.amazonaws.com/fritidbucket/"')
     }
@@ -56,11 +56,11 @@ android {
             debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField 'java.lang.String', 'FILE_PROVIDER_AUTHORITY', "\"no.appsonite.gpsping.wtfileprovider\""
+            buildConfigField 'java.lang.String', 'FILE_PROVIDER_AUTHORITY', "\"no.appsonite.nordictracker.wtfileprovider\""
             signingConfig signingConfigs.config1
         }
         debug {
-            buildConfigField 'java.lang.String', 'FILE_PROVIDER_AUTHORITY', "\"no.appsonite.gpsping.wtfileprovider\""
+            buildConfigField 'java.lang.String', 'FILE_PROVIDER_AUTHORITY', "\"no.appsonite.nordictracker.wtfileprovider\""
         }
     }
     dexOptions {
@@ -107,5 +107,6 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-s3:2.6.5'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
     compile(name: 'klarna-checkout', ext: 'aar')
 }
