--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,10 @@
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+    <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        >
         <!--release-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
